--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,16 @@
 {
+  // "presets": [
+  //   ["es2015", { "modules": false }]
+  // ],
+  // "plugins": [
+  //     ["transform-object-rest-spread"],
+  //     ["transform-runtime"]
+  // ]
   "presets": [
     "es2015",
-    "stage-0",
     "react"
+  ],
+  "plugins": [
+    ["import", { "libraryName": "antd", "style": "css" }]
   ]
 }
