--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-new-demo",
+  "name": "webpack-react",
   "version": "1.0.0",
   "description": "new start for react",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "start": "node server.js --env=dev",
     "test": "karma start",
@@ -19,61 +19,74 @@
     "release:patch": "npm version patch && npm publish && git push --follow-tags"
   },
   "author": "founy",
-  "license": "ISC",
-  "dependencies": {
-    "babel-preset-react": "^6.23.0",
-    "lodash": "^4.17.4",
-    "core-js": "^2.0.0",
-    "normalize.css": "^4.0.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
-  },
-  "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
-    "babel-core": "^6.0.0",
-    "babel-eslint": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-0": "^6.5.0",
-    "bower-webpack-plugin": "^0.1.9",
-    "chai": "^3.2.0",
-    "copyfiles": "^0.2.1",
-    "css-loader": "^0.23.0",
-    "eslint": "^2.2.0",
-    "eslint-loader": "^1.0.0",
-    "eslint-plugin-react": "^5.0.0",
-    "file-loader": "^0.8.4",
-    "glob": "^7.0.0",
-    "isparta-instrumenter-loader": "^1.0.0",
-    "json-loader": "^0.5.4",
-    "karma": "^0.13.9",
-    "karma-chai": "^0.1.0",
-    "karma-coverage": "^1.0.0",
-    "karma-mocha": "^1.0.0",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.5",
-    "karma-webpack": "^1.7.0",
-    "minimist": "^1.2.0",
-    "mocha": "^2.2.5",
-    "node-sass": "^3.4.2",
-    "null-loader": "^0.1.1",
-    "open": "0.0.5",
-    "phantomjs-prebuilt": "^2.0.0",
-    "react-addons-test-utils": "^15.0.0",
-    "react-dom": "^15.3.0",
-    "react-hot-loader": "^1.2.9",
-    "redux-devtools": "^3.3.1",
-    "rimraf": "^2.4.3",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6",
-    "webpack-dev-server": "^1.12.0"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/794485409/webpack-react.git"
+  },
+  "dependencies": {
+    "antd": "^2.10.4",
+    "core-js": "^2.4.1",
+    "create-react-class": "^15.5.2",
+    "prop-types": "^15.5.8",
+    "rc-queue-anim": "^1.0.4",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router-dom": "^4.1.1"
+  },
+  "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
+    "axios": "^0.16.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.2",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-import": "^1.2.1",
+    "babel-plugin-istanbul": "^4.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "babel-runtime": "^6.23.0",
+    "bower-webpack-plugin": "^0.1.9",
+    "chai": "^3.5.0",
+    "copyfiles": "^1.2.0",
+    "css-loader": "^0.28.0",
+    "debug": "^2.6.4",
+    "eslint": "^3.19.0",
+    "eslint-loader": "^1.7.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "glob": "^7.1.1",
+    "isparta-loader": "^2.0.0",
+    "json-loader": "^0.5.4",
+    "karma": "^1.6.0",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sinon-chai": "^1.3.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.31",
+    "karma-webpack": "^2.0.3",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
+    "minimist": "^1.2.0",
+    "mocha": "^3.2.0",
+    "node-sass": "^4.5.2",
+    "null-loader": "^0.1.1",
+    "open": "0.0.5",
+    "phantomjs-prebuilt": "^2.1.14",
+    "querystring": "^0.2.0",
+    "react-addons-test-utils": "^15.5.1",
+    "react-hot-loader": "^1.3.1",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux-devtools": "^3.3.2",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.3",
+    "sinon": "^2.1.0",
+    "sinon-chai": "^2.9.0",
+    "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2"
   }
 }
